[package]
name = "whatlang"
version = "0.16.3"
authors = ["Serhii Potapov <blake131313@gmail.com>"]
edition = "2021"
description = "Fast and lightweight language identification library for Rust."
keywords = ["language", "nlp", "lang", "whatlang", "text"]
license = "MIT"
repository = "https://github.com/greyblake/whatlang-rs"
homepage = "https://github.com/greyblake/whatlang-rs"
documentation = "https://docs.rs/whatlang"
readme = "README.md"
categories = ["text-processing", "algorithms"]
include = [
    "src/**/*",
    "test/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
hashbrown = "0.12.0"
once_cell = "1.10.0"
enum-map = { version = "2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.39"
bencher = "0.1.5"
arbtest = "0.2"

[features]
dev = []

[[bench]]
name = "example"
harness = false
path = "benches/example.rs"
